app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_validator__tests__ui_permissionless_validator-2.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_validator.rs
expression: reduced
---
[
    "AddPermlessValida": "Transaction",
    "Validator": "NodeID-2ZbTY9GatRTrfinAoYiYLcf6CvrPAUYgo",
    "SubnetID": "Primary Subnet",
    "Start time": "1970-01-01 03:25:45 UTC",
    "End time": "1970-07-20 03:25:45 UTC",
    "Stake(METAL)": "2000",
    "Signer": "0xaff4acb4c5439b5d426cadf9e946d3a452f7de3414d1ad27336133211d8b90cf49fb97eebcdeeef714dc20f54ed0d4d1",
    "Stake": "2000 METAL to ",
    "Address": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Valida rewards to": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Delega rewards to": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Delegate fee(%)": "100",
    "Fee(METAL)": "0",
]
