app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_validator__tests__ui_permissionless_validator-3.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_validator.rs
expression: reduced
---
[
    "AddPermlessValida": "Transaction",
    "Validator": "NodeID-2ZbTY9GatRTrfinAoYiYLcf6CvrPAUYgo",
    "SubnetID": "SkB92YpWm4UpburLz9tEKZw2i67H3FF6YkjaU4BkFUDTG9Xm",
    "Start time": "1970-01-01 03:25:45 UTC",
    "End time": "1970-01-01 03:25:46 UTC",
    "Stake(METAL)": "0.000000001",
    "Stake": "0.000000001 METAL to ",
    "Address": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Valida rewards to": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Delega rewards to": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Delegate fee(%)": "100",
    "Fee(METAL)": "0.001",
]
